--- a/signin.css
+++ b/signin.css
@@ -1,28 +1,50 @@
 :root {
   --input-padding-x: 1.5rem;
-  --input-padding-y: 0.75rem;
+  --input-padding-y: .75rem;
 }
 
-.login,
-.image {
-  min-height: 100vh;
+body {
+  background: #010101;
+  background: linear-gradient(to right, #222831, #393e46);
 }
 
-.bg-image {
-  background-image: url('https://source.unsplash.com/WEQbe2jBg40/600x1200');
-  background-size: cover;
-  background-position: center;
+.card-signin {
+  background-color: #ebebe3;
+  border: 0;
+  border-radius: 1rem;
+  box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+  overflow: hidden;
 }
 
-.login-heading {
+.card-signin .card-title {
+  margin-bottom: 2rem;
   font-weight: 300;
+  font-size: 1.5rem;
 }
 
-.btn-login {
-  font-size: 0.9rem;
-  letter-spacing: 0.05rem;
-  padding: 0.75rem 1rem;
-  border-radius: 2rem;
+.card-signin .card-img-left {
+
+  width: 45%;
+  /* Link to your background image using in the property below! */
+  background: scroll center url('https://images.unsplash.com/photo-1513438205128-16af16280739?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=335&q=80');
+  background-size: cover;
+}
+
+.card-signin .card-body {
+  padding: 2rem;
+}
+
+.form-signin {
+  width: 100%;
+}
+
+.form-signin .btn {
+  font-size: 80%;
+  border-radius: 5rem;
+  letter-spacing: .1rem;
+  font-weight: bold;
+  padding: 1rem;
+  transition: all 0.2s;
 }
 
 .form-label-group {
@@ -30,11 +52,14 @@
   margin-bottom: 1rem;
 }
 
+.form-label-group input {
+  height: auto;
+  border-radius: 2rem;
+}
+
 .form-label-group>input,
 .form-label-group>label {
   padding: var(--input-padding-y) var(--input-padding-x);
-  height: auto;
-  border-radius: 2rem;
 }
 
 .form-label-group>label {
@@ -47,8 +72,6 @@
   /* Override default `<label>` margin */
   line-height: 1.5;
   color: #495057;
-  cursor: text;
-  /* Match the input under the label */
   border: 1px solid transparent;
   border-radius: .25rem;
   transition: all .1s ease-in-out;
@@ -86,27 +109,21 @@
   color: #777;
 }
 
-/* Fallback for Edge
--------------------------------------------------- */
-
-@supports (-ms-ime-align: auto) {
-  .form-label-group>label {
-    display: none;
-  }
-  .form-label-group input::-ms-input-placeholder {
-    color: #777;
-  }
+.btn-google {
+  color: white;
+  background-color: #ea4335;
 }
 
-/* Fallback for IE
--------------------------------------------------- */
+.btn-facebook {
+  color: white;
+  background-color: #3b5998;
+}
 
-@media all and (-ms-high-contrast: none),
-(-ms-high-contrast: active) {
-  .form-label-group>label {
-    display: none;
-  }
-  .form-label-group input:-ms-input-placeholder {
-    color: #777;
-  }
+.register{
+  background-color: #222831;
+
+}
+
+.register:hover,.register:focus{
+  background-color: #393e46;
 }
