--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,16 +37,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Clear Doubts</a>
+              <a class="nav-link active" href="/discussions">Discuss</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Project Help</a>
+              <a class="nav-link active" href="/projectHelp">Project Help</a>
+            </li>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Discuss</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Resources</a>
+              <a class="nav-link active" href="/resources">Resources</a>
             </li>
           </ul>
         </div>
