--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,11 +40,11 @@
               <a class="nav-link active" href="/discussions">Discuss</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/projectHelp">Project Help</a>
+              <a class="nav-link active" href="/projecthelp">Project Help</a>
             </li>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/resources">Resources</a>
+              <a class="nav-link active" href="/newresources">Resources</a>
             </li>
           </ul>
         </div>
