--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -43,7 +43,7 @@
 
 
               <button class="btn btn-lg btn-primary btn-block text-uppercase register" type="submit">Sign in</button>
-              <a class="d-block text-center mt-2 small" href="#">New user? Click here to sign up</a>
+              <a class="d-block text-center mt-2 small" href="/signup">New user? Click here to sign up</a>
               <hr class="my-4">
               <button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i
                   class="fab fa-google mr-2"></i> Sign in with Google</button>
